# flipflapflop

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  MCP23017.py  Makefile  README.md  binclock.py  boot.py  cam2display.py  clock.py  configuration_sample.py  demo_switcher.py  demos.py  display.py  displayprovider.py  displayserver.py  displayserver_service.py  doctest.sh  drawing.py  fffbot.py  fffmqtt.py  fffserial.py  flipdotdisplay.py  flipdotfont.py  flipdotsim.py  flipflapflop.py  lt19.ipynb  lt19fl.py  net.py  presenter.py  pyproject.toml  pyxel_sim.py  requirements.txt  rogueflip.py  rogueflip_world.pnm  setup-picore.sh  tests.sh  text_scroller.py  uMCP23017.py  udisplayserver.py  (+6 more)
deployment/: deploy_openwrt.sh  desploy_rpi.sh  flipflapflop.service  git_clone_shallow.sh  openwrt_service.sh
doc/: Makefile  conf.py  index.rst  make.bat
docgen/: Makefile  conf.py  developer.rst  fdd.rst  flipdotsim_example.py  game.rst  index.rst  make.bat  net.rst  simulator.rst  web.rst
docs/: .buildinfo  CNAME  README.html  developer.html  fdd.html  game.html  genindex.html  index.html  net.html  netdisplaytut.html  objects.inv  py-modindex.html  search.html  searchindex.js  simulator.html  web.html
gamejamdo_2020-05/: Makefile  README.md
godot_client/: Connect.gd  Connect.tscn  Main.gd  Main.tscn  fff.gd  fff.tscn  project.godot
godot_emu/: Config.gd  Config.tscn  Main.gd  Main.tres  Main.tscn  Map.gd  Map.tscn  export_presets.cfg  project.godot  rogueflip_tiles.jpg.import
ressources/: presentation.tmx  pyxel_sim.pyxres  rogueflip_easy.tmx
templates/: index.html
(+68 files in other folders)
