[tool.poetry]
name = "flipflapflop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
PyTMX = "^3.31"
paho-mqtt = "^1.6.1"
zeroconf = "^0.39.3"
pyserial = "^3.5"
flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
